--- a/HW1/index.html
+++ b/HW1/index.html
@@ -18,11 +18,13 @@
         <div class="column-right">
             <h2>Добавить новое дело</h2>
             <div class="inputArea">
+                <form action="post">
                 <h3>* Название</h3>
                 <textarea name="" id="name" cols="55" rows="3"></textarea>
                 <h3>* Описание</h3>
                 <textarea name="" id="opis" cols="55" rows="15"></textarea>
-                <button type="reset" class="addWork">Добавить дело</button>
+                <input type="reset" class="addWork" value="Добавить дело">
+                </form>
             </div>
         </div>
     </div>
